[package]
name = "mvtable-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mvtable = { path = "../mvtable", features = ["simd"] }
capt = { version = "3.1", features = ["simd"] }
kiddo = { version = "5", default-features = false }
rand = { version = "0.10", default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "collide"
harness = false

[[bin]]
name = "mbm_bench"
